# Sierpinski-Triangle

./: README.md  meson.build
include/glad/: glad.h
src/: glad.c  main.cpp  meson.build  shaders.cpp  shaders.hpp  triangle.cpp  triangle.hpp
